--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Spring Security Example</title>
+    <title>Привественная страница</title>
 </head>
 <body>
-<h1>Welcome to Index PAGE!</h1>
-
-
+<h2>Пользователю доступны следующие дейсвтия: </h2>
+<form th:action="@{/login}" th:method="GET">
+    <input type="submit" value="Вход">
+</form>
 </body>
 </html>
