--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,8 +5,11 @@
 </head>
 <body>
 <h2>Пользователю доступны следующие дейсвтия: </h2>
-<form th:action="@{/login}" th:method="GET">
-    <input type="submit" value="Вход">
+<h3><a href = "/user">Войти как пользователь</a></h3>
+<h3><a href = "/admin/admin">Войти как админ</a></h3>
+
+<form  th:action="@{/logout}" th:method="POST">
+    <input type="submit" value="Logout"/>
 </form>
 </body>
 </html>
