--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,33 +1,288 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <title>Admin panel</title>
 </head>
 <body>
-<table>
-  <tr>
-    <th>First name</th>
-    <th>Last name</th>
-    <th>Age</th>
-    <th>Role</th>
-    <th></th>
-    <th></th>
-  </tr>
-  <tr th:each="user : ${adminUser}">
-    <td th:utext="${user.getName()}">name</td>
-    <td th:utext="${user.getLastName()}">lastname</td>
-    <td th:utext="${user.getAge()}">age</td>
-    <td th:utext="${user.getAuthorities()}">role</td>
-    <td><a th:href="@{/admin/edit(id=${user.getId()})}">update</a></td>
-    <td><a th:href="@{/admin/delete(id=${user.getId()})}">delete</a></td>
-  </tr>
-</table>
-<br/>
-<a href="/admin/new">Create new user</a>
-<br />
-<form  th:action="@{/logout}" th:method="POST">
-  <input type="submit" value="Logout"/>
-</form>
+<nav class="navbar navbar-dark bg-dark p-0">
+  <div class="container-fluid">
+    <div class="text-white">
+      <span><strong th:text="${adminUser.getUsername()}"></strong></span>
+      <span> with roles: </span>
+      <span th:each="role :${adminUser.getRoles()}">
+              <span th:text="${role}"></span>
+            </span>
+    </div>
+    <div class="nav navbar-nav navbar-right">
+      <span><a href="/logout" class="nav-link">Logout</a></span>
+    </div>
+  </div>
+</nav>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-2 mt-3 px-0">
+      <ul class="nav flex-column nav-pills" role="tablist">
+        <li><a class="nav-link active" href="#Admin" role="tab" data-toggle="pill">Admin</a></li>
+        <li><a class="nav-link" href="#User" role="tab" data-toggle="pill">User</a></li>
+      </ul>
+    </div>
+    <div class="col-10 bg-light" style="height: 100vh">
+      <div class="container mt-3">
+        <div class="tab-content">
+          <div role="tabpanel" class="tab-pane fade show active" id="Admin">
+            <div class="page-header">
+              <h2>Admin panel</h2>
+              <ul class="nav nav-tabs" role="tablist">
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link active" href="#usersTable" role="tab" data-toggle="tab" aria-selected="true">Users table</a>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link" href="#newUser" role="tab" data-toggle="tab" aria-selected="false">New User</a>
+                </li>
+              </ul>
+
+              <div class="tab-content">
+                <div role="tabpanel" class="tab-pane fade show active" id="usersTable">
+                  <div class="card">
+                    <h5 class="card-header">All users</h5>
+                    <div class="card-body">
+                      <table class="table table-striped">
+                        <thead>
+                        <tr>
+                          <th scope = "col">ID</th>
+                          <th scope = "col">First name</th>
+                          <th scope = "col">Last name</th>
+                          <th scope = "col">Age</th>
+                          <th scope = "col">Email</th>
+                          <th scope = "col">Role</th>
+                          <th scope = "col">Edit</th>
+                          <th scope = "col">Delete</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each ="user : ${users}">
+                          <td th:text="${user.getId()}"></td>
+                          <td th:text="${user.getName()}"></td>
+                          <td th:text="${user.getLastName()}"></td>
+                          <td th:text="${user.getAge()}"></td>
+                          <td th:text="${user.getUsername()}"></td>
+                          <td>
+                  <span th:each="role :${user.getRoles()}">
+                    <span th:text="${role}"></span>
+                  </span>
+                          </td>
+                          <td>
+                            <button type="button" class="btn btn-info" data-toggle="modal"
+                                    th:data-target="${'#editModal'+user.id}">Edit</button>
+                            <div class="modal fade" th:id="${'editModal'+user.id}" tabindex="-1">
+                              <div class="modal-dialog">
+                                <div class="modal-content">
+                                  <div class="modal-header">
+                                    <h5 class="modal-title">Edit user</h5>
+                                    <button type="button" class="close" data-dismiss="modal"
+                                            aria-label="Close">
+                                      <span aria-hidden="true">&times;</span>
+                                    </button>
+                                  </div>
+                                  <div class="modal-body">
+                                    <form th:method="POST" th:action="@{/admin/edit(id=${user.getId()})}" th:object="${user}">
+                                      <div class="container mt-2 col-sm-6 text-center">
+                                        <div class="form-group">
+                                          <label class="form-label" for="editId"><strong>ID</strong></label>
+                                          <input class="form-control" th:name="id" type="text" th:value="${user.id}" id="editId" readonly/>
+                                        </div>
+                                        <div class="form-group">
+                                          <label class="form-label" for="editName"><strong>First name</strong></label>
+                                          <input class="form-control" th:name="name" type="text" th:value="${user.name}" id="editName"/>
+                                        </div>
+                                        <div class="form-group">
+                                          <label class="form-label" for="editLastName"><strong>Last name</strong></label>
+                                          <input class="form-control" th:name="lastName" type="text" th:value="${user.lastName}" id="editLastName"/>
+                                        </div>
+                                        <div class="form-group">
+                                          <label class="form-label" for="editAge"><strong>Age</strong></label>
+                                          <input class="form-control" th:name="age" type="number" th:value="${user.age}" id="editAge"/>
+                                        </div>
+                                        <div class="form-group">
+                                          <label class="form-label" for="editUsername"><strong>Email</strong></label>
+                                          <input class="form-control" th:name="username" type="text" th:value="${user.username}" id="editUsername"/>
+                                        </div>
+                                        <div class="form-group">
+                                          <label class="form-label" for="editPassword"><strong>Password</strong></label>
+                                          <input class="form-control" th:name="password" type="password" id="editPassword"/>
+                                        </div>
+                                        <div class="form-group text-center ">
+                                          <label class="col-form-label font-weight-bold" for="roles">Role</label>
+                                          <select class="form-control" name="roles" multiple size="2">
+                                            <option th:each="role : ${roles}"
+                                                    th:value="${role.roleName}"
+                                                    th:text="${role.toString()}"></option>
+                                          </select>
+                                        </div>
+                                      </div>
+                                      <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                                data-dismiss="modal">Close</button>
+                                        <input type="submit" class="btn btn-primary" value="Edit">
+                                      </div>
+                                    </form>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </td>
+                          <td>
+                            <button type="button" class="btn btn-danger" data-toggle="modal"
+                                    th:data-target="'#deleteModal' + ${user.id}">Delete</button>
+                            <div class="modal fade" th:id="${'deleteModal'+user.id}" tabindex="-1">
+                              <div class="modal-dialog">
+                                <div class="modal-content">
+                                  <div class="modal-header">
+                                    <h5 class="modal-title">Delete user</h5>
+                                    <button type="button" class="close" data-dismiss="modal"
+                                            aria-label="Close">
+                                      <span aria-hidden="true">&times;</span>
+                                    </button>
+                                  </div>
+                                  <div class="modal-body">
+                                    <form th:method="DELETE" th:action="@{/admin/delete(id=${user.id})}"
+                                          th:object="${user}">
+                                      <div class="container mt-2 col-sm-6 text-center">
+                                        <div class="form-group">
+                                          <label class="form-label" for="deleteId"><strong>ID</strong></label>
+                                          <input class="form-control" th:name="id" type="text" th:value="${user.id}" id="deleteId" readonly/>
+                                        </div>
+                                        <div class="form-group">
+                                          <label class="form-label" for="deleteName"><strong>First name</strong></label>
+                                          <input class="form-control" th:name="name" type="text" th:value="${user.name}" id="deleteName" readonly/>
+                                        </div>
+                                        <div class="form-group">
+                                          <label class="form-label" for="deleteLastName"><strong>Last name</strong></label>
+                                          <input class="form-control" th:name="lastName" type="text" th:value="${user.lastName}" id="deleteLastName" readonly/>
+                                        </div>
+                                        <div class="form-group">
+                                          <label class="form-label" for="deleteAge"><strong>Age</strong></label>
+                                          <input class="form-control" th:name="age" type="number" th:value="${user.age}" id="deleteAge" readonly/>
+                                        </div>
+                                        <div class="form-group">
+                                          <label class="form-label" for="deleteUsername"><strong>Email</strong></label>
+                                          <input class="form-control" th:name="username" type="text" th:value="${user.username}" id="deleteUsername" readonly/>
+                                        </div>
+                                        <div class="form-group">
+                                          <label for="rolesDelete"><strong>Role</strong></label>
+                                          <select th:name="roles"
+                                                  multiple
+                                                  class="custom-select" size="2"
+                                                  id="rolesDelete" th:readonly="true">
+                                            <option th:each="role: ${user.roles}"
+                                                    th:value="${role.getId()}"
+                                                    th:text="${role.toString()}">
+                                            </option>
+                                          </select>
+                                        </div>
+                                      </div>
+                                      <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                                data-dismiss="modal">Close</button>
+                                        <input type="submit" class="btn btn-primary" value="Delete">
+                                      </div>
+                                    </form>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </td>
+                        </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+                <div class="tab-pane fade" id="newUser" role="tabpanel" aria-labelledby="nav-profile-tab">
+                  <div class="card">
+                    <h5 class="card-header">Add new user</h5>
+                    <div class="card-body">
+                      <div class="container mt-2 col-sm-4 text-center">
+                        <form th:method="POST" th:action="@{/admin/new}" th:object="${newUser}">
+                          <div class="form-group">
+                            <label class="font-weight-bold" for="newName"><strong>First name</strong></label>
+                            <input class="form-control" th:name="name" type="text" th:field="${newUser.name}" id="newName"/>
+                          </div>
+                          <div class="form-group">
+                            <label class="font-weight-bold" for="newLastName"><strong>Last name</strong></label>
+                            <input class="form-control" th:name="lastName" type="text" th:field="${newUser.lastName}" id="newLastName"/>
+                          </div>
+                          <div class="form-group">
+                            <label class="font-weight-bold" for="newAge"><strong>Age</strong></label>
+                            <input class="form-control" th:name="age" type="number" th:field="${newUser.age}" id="newAge"/>
+                          </div>
+                          <div class="form-group">
+                            <label class="font-weight-bold" for="newUsername"><strong>Email</strong></label>
+                            <input class="form-control" th:name="username" type="text" th:field="${newUser.username}" id="newUsername"/>
+                          </div>
+                          <div class="form-group">
+                            <label class="font-weight-bold" for="newPassword"><strong>Password</strong></label>
+                            <input class="form-control" th:name="password" type="password" th:field="${newUser.password}" id="newPassword"/>
+                          </div>
+                          <div class="form-group text-center ">
+                            <label class="col-form-label font-weight-bold" for="roles">Role</label>
+                            <select class="form-control" id="roles" name="roles" multiple size="2">
+                              <option th:each="role : ${roles}"
+                                      th:value="${role.roleName}"
+                                      th:text="${role.toString()}"></option>
+                            </select>
+                          </div>
+                          <button type="submit" class="btn btn-success">Add new user</button>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div role="tabpanel" class="tab-pane fade" id="User">
+            <div class="page-header">
+              <h2>User information-page</h2>
+              <h5 class="card-header">About user</h5>
+              <table class="table table-striped card-body">
+                <thead>
+                <tr>
+                  <th scope = "col">ID</th>
+                  <th scope = "col">First name</th>
+                  <th scope = "col">Last name</th>
+                  <th scope = "col">Age</th>
+                  <th scope = "col">Email</th>
+                  <th scope = "col">Role</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                  <td th:text="${adminUser.getId()}"></td>
+                  <td th:text="${adminUser.getName()}"></td>
+                  <td th:text="${adminUser.getLastName()}"></td>
+                  <td th:text="${adminUser.getAge()}"></td>
+                  <td th:text="${adminUser.getUsername()}"></td>
+                  <td>
+            <span th:each="role :${adminUser.getRoles()}">
+              <span th:text="${role}"></span>
+            </span>
+                  </td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
