--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,27 +1,77 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <title>User page</title>
 </head>
 <body>
-<table>
-    <tr>
-        <th>First name</th>
-        <th>Last name</th>
-        <th>Age</th>
-        <th>Role</th>
-    </tr>
-    <tr>
-        <td th:utext="${user.getName()}">name</td>
-        <td th:utext="${user.getLastName()}">lastname</td>
-        <td th:utext="${user.getAge()}">age</td>
-        <td th:utext="${user.getAuthorities()}">role</td>
-    </tr>
-</table>
-<br/>
-<form  th:action="@{/logout}" th:method="POST">
-    <input type="submit" value="Logout"/>
-</form>
+<nav class="navbar navbar-dark bg-dark p-0">
+    <div class="container-fluid">
+        <div class="text-white">
+            <span><strong th:text="${user.getUsername()}"></strong></span>
+            <span> with roles: </span>
+            <span th:each="role :${user.getRoles()}">
+              <span th:text="${role}"></span>
+            </span>
+        </div>
+        <div class="nav navbar-nav navbar-right">
+            <span><a href="/logout" class="nav-link">Logout</a></span>
+        </div>
+    </div>
+</nav>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-2 mt-3 px-0">
+            <ul class="nav flex-column nav-pills" role="tablist">
+                <li><a class="nav-link active" href="#User" role="tab" data-toggle="pill" aria-selected="true">User</a></li>
+            </ul>
+        </div>
+
+        <div class="col-10 bg-light" style="height: 100vh">
+            <div class="container mt-3">
+                <div class="tab-content">
+
+                    <div role="tabpanel" class="tab-pane fade show active" id="User">
+                        <div class="page-header">
+                            <h2>User information-page</h2>
+                            <h5 class="card-header">About user</h5>
+                            <table class="table table-striped card-body">
+                                <thead>
+                                <tr>
+                                    <th scope = "col">ID</th>
+                                    <th scope = "col">First name</th>
+                                    <th scope = "col">Last name</th>
+                                    <th scope = "col">Age</th>
+                                    <th scope = "col">Email</th>
+                                    <th scope = "col">Role</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td th:text="${user.getId()}"></td>
+                                    <td th:text="${user.getName()}"></td>
+                                    <td th:text="${user.getLastName()}"></td>
+                                    <td th:text="${user.getAge()}"></td>
+                                    <td th:text="${user.getUsername()}"></td>
+                                    <td>
+            <span th:each="role :${user.getRoles()}">
+              <span th:text="${role}"></span>
+            </span>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
