--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -7,17 +7,16 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="/user.js"></script>
     <title>User page</title>
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark p-0">
     <div class="container-fluid">
         <div class="text-white">
-            <span><strong th:text="${user.getUsername()}"></strong></span>
+            <span><strong id="navUsername"></strong></span>
             <span> with roles: </span>
-            <span th:each="role :${user.getRoles()}">
-              <span th:text="${role}"></span>
-            </span>
+            <span id="navRoles"></span>
         </div>
         <div class="nav navbar-nav navbar-right">
             <span><a href="/logout" class="nav-link">Logout</a></span>
@@ -51,19 +50,7 @@
                                     <th scope = "col">Role</th>
                                 </tr>
                                 </thead>
-                                <tbody>
-                                <tr>
-                                    <td th:text="${user.getId()}"></td>
-                                    <td th:text="${user.getName()}"></td>
-                                    <td th:text="${user.getLastName()}"></td>
-                                    <td th:text="${user.getAge()}"></td>
-                                    <td th:text="${user.getUsername()}"></td>
-                                    <td>
-            <span th:each="role :${user.getRoles()}">
-              <span th:text="${role}"></span>
-            </span>
-                                    </td>
-                                </tr>
+                                <tbody id="userData">
                                 </tbody>
                             </table>
                         </div>
